simple-api-example/deploy/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-api
  labels:
    app: sample-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-api
  template:
    metadata:
      labels:
        app: sample-api
    spec:
      containers:
        - name: sample-api
          image: sample-api-skaffold
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: sample-api-service
spec:
  selector:
    app: sample-api
  ports:
    - protocol: TCP
      port: 3000
